<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingVertical="16dp"
  android:paddingHorizontal="24dp">

  <TextView
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_margin="4dp"
    android:text="@string/info_put"
    android:textSize="24sp"
    android:textStyle="bold" />

  <EditText
    android:id="@+id/editTextTitle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/textView"
    android:layout_margin="4dp"
    android:hint="@string/info_title"
    android:inputType="text"
    android:importantForAutofill="no" />

  <EditText
    android:id="@+id/editTextContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/editTextTitle"
    android:layout_margin="4dp"
    android:hint="@string/info_content"
    android:inputType="textMultiLine"
    android:importantForAutofill="no" />

  <EditText
    android:id="@+id/editTextImage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/editTextContent"
    android:layout_margin="4dp"
    android:hint="@string/info_image"
    android:inputType="textUri"
    android:importantForAutofill="no" />

  <Button
    android:id="@+id/action_update"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/editTextImage"
    android:layout_margin="4dp"
    android:layout_alignParentEnd="true"
    android:text="@string/action_update" />

  <Button
    android:id="@+id/action_cancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/editTextImage"
    android:layout_toStartOf="@id/action_update"
    android:layout_margin="4dp"
    android:text="@string/action_cancel" />

</RelativeLayout>